--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "fable-compiler": "^2.4.16",
     "fable-loader": "^2.1.8",
     "file-loader": "^4.2.0",
+    "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.3.0",
+    "markdown-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
     "open-sans-fonts": "^1.5.1",
     "remotedev": "^0.2.9",
