--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -8,6 +8,7 @@
     <Compile Include="Index.fs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Fable.Elmish.Debugger" Version="3.2.0" />
     <PackageReference Include="Fable.Elmish.HMR" Version="4.0.1" />
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.MaterialUI.Icons" Version="1.3.0" />
