--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -8,10 +8,12 @@
     <Compile Include="Index.fs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Fable.Browser.Navigator" Version="1.0.1" />
     <PackageReference Include="Fable.Elmish.Debugger" Version="3.2.0" />
     <PackageReference Include="Fable.Elmish.HMR" Version="4.0.1" />
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.MaterialUI.Icons" Version="1.3.0" />
+    <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Feliz" Version="1.6.0" />
     <PackageReference Include="Feliz.MaterialUI" Version="1.0.1" />
     <PackageReference Include="Feliz.Router" Version="3.0.1" />
