--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <Compile Include="Utils.fs" />
     <Compile Include="FancyButton.fs" />
+    <Compile Include="SliderMorph.fs" />
     <Compile Include="Explain.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Index.fs" />
