--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.53",
+    "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
