--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="FancyButton.fs" />
     <Compile Include="SliderMorph.fs" />
     <Compile Include="Explain.fs" />
+    <Compile Include="EncodeImageDialog.fs" />
     <Compile Include="Share.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Index.fs" />
