--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Checkface.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="FancyButton.fs" />
     <Compile Include="SliderMorph.fs" />
@@ -20,6 +21,7 @@
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.MaterialUI.Icons" Version="1.3.0" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
+    <PackageReference Include="Fable.Fetch" Version="2.2.0" />
     <PackageReference Include="Feliz" Version="1.16.1" />
     <PackageReference Include="Feliz.MaterialUI" Version="1.0.1" />
     <PackageReference Include="Feliz.Router" Version="3.0.1" />
