--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack"
+    "prestart": "dotnet tool restore",
+    "start": "dotnet fable watch ./src -s --run webpack-dev-server",
+    "prebuild": "dotnet tool restore",
+    "build": "dotnet fable ./Server && webpack"
   },
   "dependencies": {
-    "@material-ui/icons": "^4.9.1",
-    "bulma": "^0.8.2",
+    "@material-ui/icons": "^4.11.2",
+    "bulma": "^0.9.2",
     "bulma-prefers-dark": "0.1.0-beta.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-transform-runtime": "^7.10.5",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/runtime": "^7.10.5",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.53",
-    "@svgr/webpack": "^5.4.0",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@svgr/webpack": "^5.5.0",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "core-js": "^3.3.2",
-    "css-loader": "^2.0.1",
-    "fable-compiler": "^2.4.16",
-    "fable-loader": "^2.1.8",
-    "file-loader": "^4.2.0",
-    "html-loader": "^1.3.0",
-    "html-webpack-plugin": "^4.3.0",
-    "markdown-loader": "^5.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "copy-webpack-plugin": "^6.4.1",
+    "core-js": "^3.8.2",
+    "css-loader": "^4.3.0",
+    "esm": "^3.2.25",
+    "file-loader": "^6.2.0",
+    "graceful-fs": "^4.2.4",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.1",
+    "markdown-loader": "^6.0.0",
+    "mini-css-extract-plugin": "^1.3.4",
     "open-sans-fonts": "^1.5.1",
+    "react-refresh": "^0.9.0",
     "remotedev": "^0.2.9",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.4",
+    "sass-loader": "^10.1.1",
+    "source-map-loader": "^2.0.1",
+    "style-loader": "^2.0.0",
     "terser": "^4.8.0",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
-    "whatwg-fetch": "^3.0.0"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
   }
 }
