--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -17,17 +17,18 @@
     <Compile Include="Index.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fable.Browser.Dom" Version="2.1.1" />
-    <PackageReference Include="Fable.Browser.Navigator" Version="1.0.1" />
+    <PackageReference Include="Fable.Browser.Navigator" Version="1.2.0" />
+    <PackageReference Include="Fable.Core" Version="3.2.5" />
+    <PackageReference Include="Fable.Elmish" Version="3.1.0" />
     <PackageReference Include="Fable.Elmish.Debugger" Version="3.2.0" />
-    <PackageReference Include="Fable.Elmish.HMR" Version="4.0.1" />
+    <PackageReference Include="Fable.Elmish.HMR" Version="4.1.0" />
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.MaterialUI.Icons" Version="1.3.0" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Fable.Fetch" Version="2.2.0" />
-    <PackageReference Include="Feliz" Version="1.16.1" />
-    <PackageReference Include="Feliz.MaterialUI" Version="1.0.1" />
-    <PackageReference Include="Feliz.Router" Version="3.0.1" />
+    <PackageReference Include="Feliz" Version="1.40.0" />
+    <PackageReference Include="Feliz.MaterialUI" Version="1.2.6" />
+    <PackageReference Include="Feliz.Router" Version="3.7.0" />
     <PackageReference Include="Fulma" Version="2.9.0" />
   </ItemGroup>
 </Project>
