--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="FancyButton.fs" />
     <Compile Include="SliderMorph.fs" />
     <Compile Include="Explain.fs" />
+    <Compile Include="BrowseFacesDialog.fs" />
     <Compile Include="EncodeImageDialog.fs" />
     <Compile Include="Share.fs" />
     <Compile Include="AppState.fs" />
@@ -26,7 +27,7 @@
     <PackageReference Include="Fable.MaterialUI.Icons" Version="1.3.0" />
     <PackageReference Include="Fable.Promise" Version="2.1.0" />
     <PackageReference Include="Fable.Fetch" Version="2.2.0" />
-    <PackageReference Include="Feliz" Version="1.40.0" />
+    <PackageReference Include="Feliz" Version="1.40.1" />
     <PackageReference Include="Feliz.MaterialUI" Version="1.2.6" />
     <PackageReference Include="Feliz.Router" Version="3.7.0" />
     <PackageReference Include="Fulma" Version="2.9.0" />
