--- a/package.json
+++ b/package.json
@@ -8,45 +8,45 @@
   },
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
-    "bulma": "^0.9.2",
+    "bulma": "^0.9.3",
     "bulma-prefers-dark": "0.1.0-beta.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "4.0.0-alpha.56",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/runtime": "^7.17.2",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@svgr/webpack": "^5.5.0",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.4.1",
-    "core-js": "^3.8.2",
-    "css-loader": "^4.3.0",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^9.1.0",
+    "core-js": "^3.21.1",
+    "css-loader": "^6.5.1",
     "esm": "^3.2.25",
     "file-loader": "^6.2.0",
-    "graceful-fs": "^4.2.4",
+    "graceful-fs": "^4.2.9",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.5.0",
     "markdown-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^1.3.4",
+    "mini-css-extract-plugin": "^2.4.5",
     "open-sans-fonts": "^1.5.1",
-    "react-refresh": "^0.9.0",
+    "react-refresh": "^0.11.0",
     "remotedev": "^0.2.9",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.4",
-    "sass-loader": "^10.1.1",
-    "source-map-loader": "^2.0.1",
-    "style-loader": "^2.0.0",
+    "resolve-url-loader": "^3.1.4",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.3.0",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.0",
     "terser": "^4.8.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
   }
 }
