--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "dotnet fable ./Server && webpack"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.56",
     "bulma": "^0.9.3",
     "bulma-prefers-dark": "0.1.0-beta.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/lab": "4.0.0-alpha.56",
     "react": "^17.0.2",
+    "react-advanced-cropper": "^0.6.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
